--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!--Tiles-->
     <section class="p-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md p-md-mb-3">
             <div class="card bg-dark text-light">
               <div class="card-body">
