--- a/index.html
+++ b/index.html
@@ -174,6 +174,74 @@
         </div>
       </div>
     </section>
+    
+    <!--Our Instructors-->
+    <section class="bg-primary p-5">
+      <div class="container">
+        <h2 class="text-center text-white">Our Instructors</h2>
+        <p class="lead text-center text-white mb-5">
+          Our instructors all have 5+ years working as a web developer in the
+          industry
+        </p>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">John Doe</h3>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, reiciendis similique quod velea?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Jack smith</h3>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, reiciendis similique quod velea?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/15.jpg" alt="" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Simon smith</h3>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, reiciendis similique quod velea?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/women/11.jpg" alt="" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">John Doe</h3>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos cupiditate, reiciendis similique quod velea?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>  
+    </section>
 
 
     <!--java Script-->
