--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!--Showcase-->
 
-    <section class="bg-dark text-light text-center p-5 ">
+    <section class="bg-dark text-light p-5 ">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
