--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                         <button class="btn bg-warning" type="button">Enroll now</button>
                     </div>       
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="./img/react_y7wq.svg" alt="cloudhosting">          
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=v1DGmqhcGYE"></iframe>
+                </div>          
             </div>          
         </div>
     </section>
